[project]
name = "rsai-nilanjan-sweep-experiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.6.1",
    "huggingface-hub>=1.5.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "peft>=0.18.1",
    "pytz>=2026.1.post1",
    "strong-reject",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
]

[tool.uv.sources]
strong-reject = { git = "https://github.com/dsbowen/strong_reject.git", rev = "main" }
